<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TaxActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="연말정산 결과"
                app:titleTextColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_total_salary"
                    android:textSize="24sp"
                    android:text="@string/result_total_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_finalized_tax"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp"
                    android:text="@string/result_finalized_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_insurance"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp"
                    android:text="@string/result_insurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_saving_pension"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp"
                    android:text="@string/result_saving_pension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_retirement_pension"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp"
                    android:text="@string/result_retirement_pension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:textSize="21sp"
                    android:text="@string/result_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btn_yes"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="@string/result_help_yes"
                    android:background="@drawable/selector_solid_navy"
                    android:layout_width="140dp"
                    android:layout_height="40dp"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>