<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TaxActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="간편 연말정산"
                app:titleTextColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorNavy"
                    android:layout_width="match_parent"
                    app:helperText="@string/helper_total_salary"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_total_salary"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="총급여"
                        android:inputType="number"
                        android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="12dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorNavy"
                    android:layout_width="match_parent"
                    app:helperText="@string/helper_retirement_pension"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_retirement_pension"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="퇴직연금"
                        android:inputType="numberDecimal"
                        android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="12dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorNavy"
                    android:layout_width="match_parent"
                    app:helperText="@string/helper_saving_pension"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:imeOptions="actionNext"
                        android:id="@+id/edt_saving_pension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="연금저축"
                        android:inputType="numberDecimal"
                        android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                    android:text="장애인 전용 보험"
                    android:gravity="center"
                    android:textColor="@color/colorGray3"
                    android:id="@+id/cb_handicapped"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorNavy"
                    android:layout_width="match_parent"
                    app:helperText="@string/helper_insurance"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:imeOptions="actionNext"
                        android:id="@+id/edt_insurance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="보장성 보험"
                        android:inputType="numberDecimal"
                        android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="12dp"
                    app:helperText="@string/helper_finalized_tax"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/colorNavy"
                    android:layout_width="match_parent"
                    app:helperTextEnabled="true"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:id="@+id/edt_finalized_tax"
                        android:layout_height="wrap_content"
                        android:hint="결정세액"
                        android:inputType="numberDecimal"
                        android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_done"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:background="@drawable/selector_solid_navy"
                    android:layout_marginTop="30dp"
                    android:text="계산하기"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>